# tippin-sol

./: .gitignore  .gitmodules  README.md  check-dependencies.sh  registry.toml  run.sh  start-server.sh  start-studio.sh  stop.sh
agents/agents/console/: coral-agent.toml  main.py  pyproject.toml  run_agent.sh
agents/firecrawl/: .env_sample  Dockerfile  README.md  coral-agent.toml  main.py  pyproject.toml
agents/firecrawl/.github/workflows/: docker-image.yml
agents/github/: .env_sample  .gitignore  Dockerfile  README.md  coral-agent.toml  main.py  pyproject.toml  run_agent.sh
agents/github/.github/workflows/: docker-image.yml
agents/interface/: .env_sample  Dockerfile  README.md  coral-agent.toml  install.sh  main.py  pyproject.toml  requirements.txt  test.py
agents/interface/.github/workflows/: docker-image.yml
agents/notification/: coral-agent.toml  main.py  pyproject.toml  run_agent.sh
agents/transaction/: coral-agent.toml  main.py  pyproject.toml  run_agent.sh
agents/validation/: coral-agent.toml  main.py  pyproject.toml  run_agent.sh
coral-server/: .gitignore  Dockerfile  MIGRATING.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
coral-server/.github/workflows/: docker.yml  trufflehog.yml
coral-server/examples/camel-resources/: camel-interface-resource.py
coral-server/examples/camel-search-maths/: README.md  config.py  mcp_example_camel_interface.py  mcp_example_camel_math.py  mcp_example_camel_search.py  prompts.py  requirements.txt  tools.py  venv.sh
coral-server/examples/camel-search-maths/interface/: coral-agent.toml
coral-server/examples/camel-search-maths/math/: coral-agent.toml
coral-server/examples/session-posts/: Local docker session.http  application.yaml
coral-server/gradle/wrapper/: gradle-wrapper.properties
coral-studio/: .gitignore  CONTRIBUTING.md  README.md  api_v1.json  flake.nix  package.json  server.js  socketio.ts  tsconfig.json  vite.config.ts
coral-studio/.github/workflows/: build-and-deploy.yml
coral-studio/src/: app.css  app.html  hooks.server.ts
coral-studio/src/lib/: color.ts  logs.svelte.ts  mcptools.ts  session.svelte.ts  socket.svelte.ts  supabaseClient.ts  telemetry.json  threads.ts
coral-studio/src/routes/: +error.svelte  +layout.svelte  +page.svelte
(+197 files in other folders)
